Fix "flickering" table row styles due to Infima's alternate row styling
Infima by default styles alternate table rows using CSS nth-child selector
but this causes "flickering" of table row background colors because the table
is virtualized.

--- a/website/src/components/phenotypes.module.css
+++ b/website/src/components/phenotypes.module.css
@@ -6,6 +6,8 @@
   display: grid;
   grid-template-columns: minmax(300px, 1fr) 4fr;
   column-gap: 20px;
+
+  --ifm-table-stripe-background: var(--ifm-table-background);
 }
 
 .populationCell {
@@ -15,3 +17,5 @@
   justify-content: center;
   align-items: center;
 }
+
+
